k8s/resources/front-canary-deploy.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: front
  labels:
    app: front
spec:
  replicas: 4
  strategy:
    canary:
      maxSurge: "25%"
      maxUnavailable: 0
      steps:
        - setWeight: 20
        - pause: { duration: 10s }
        - setWeight: 40
        - pause: { duration: 10s }
        - setWeight: 60
        - pause: { duration: 10s }
        - setWeight: 80
        - pause: { duration: 10s }
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      name: front
      labels:
        app: front
    spec:
      containers:
        - name: reactdeploy
          image: 906294041269.dkr.ecr.ap-northeast-2.amazonaws.com/front
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: front
