k8s/resources/front-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  labels:
    app: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      name: front
      labels:
        app: front
    spec:
      containers:
        - name: reactdeploy
          image: 906294041269.dkr.ecr.ap-northeast-2.amazonaws.com/front
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: front
