k8s/resources/grafana-canary-deploy.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  replicas: 4
  strategy:
    canary:
      maxSurge: "25%"
      maxUnavailable: 0
      steps:
        - setWeight: 20
        - pause: { duration: 10s }
        - setWeight: 40
        - pause: { duration: 10s }
        - setWeight: 60
        - pause: { duration: 10s }
        - setWeight: 80
        - pause: { duration: 10s }
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      name: grafana
      labels:
        app: grafana
    spec:
      containers:
        - env:
            - name: GF_INSTALL_PLUGINS
              valueFrom:
                configMapKeyRef:
                  name: config-grafana
                  key: GF_INSTALL_PLUGINS
          name: customgrafana
          image: 906294041269.dkr.ecr.ap-northeast-2.amazonaws.com/grafana
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: grafana
