k8s/resources/grafana-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      name: grafana
      labels:
        app: grafana
    spec:
      containers:
        - env:
            - name: GF_INSTALL_PLUGINS
              valueFrom:
                configMapKeyRef:
                  name: config-grafana
                  key: GF_INSTALL_PLUGINS
          name: customgrafana
          image: 906294041269.dkr.ecr.ap-northeast-2.amazonaws.com/grafana
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: grafana
