k8s/resources/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-02fdbd9edc3873dfa,subnet-0724bcc1923d5d20d
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:906294041269:certificate/e161afd1-8de3-4718-b31c-63cab08e991b
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  rules:
    - host: "argocd.devlitemonitor.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-servcer
                port:
                  number: 80
